# hw01

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ANSWER.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hellocmake.sln  hw01报告.md  main  main.cpp  main.vcxproj  main.vcxproj.filters  mandel.cpp  mandel.h  rainbow.cpp  rainbow.h  run.sh
main.dir/Debug/: main.exe.recipe  main.ilk
main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pic/: mandel.cpp  rainbow.cpp
stbiw/: CMakeLists.txt  Makefile  cmake_install.cmake  generate_stb_images.cpp  generate_stb_images.h  lib.cpp  main.cpp  stb.cpp  stb_image_write.cc  stb_image_write.cpp  stb_image_write.h  stb_image_write_impl.cpp  stb_img_write.cpp  stbiw.cpp  stbiw.vcxproj  stbiw.vcxproj.filters
stbiw/Debug/: stbiw.lib
stbiw/src/: main.cpp
stbiw/stbiw.dir/Debug/: stbiw.lib.recipe
stbiw/stbiw.dir/Debug/stbiw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
